# aoc25

./: .gitmodules
day1/: CMakeLists.txt
day1/src/: lib.cpp  lib.hpp  main.cpp
day1/test/: hello_test.cpp
day2/: CMakeLists.txt  Makefile  README.md
day2/src/: lib.cpp  lib.hpp  main.cpp
day2/test/: CMakeLists.txt  lib_test.cpp
